[package]
name = "singlemap"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
description = "rust single map a macro"
documentation = "https://docs.rs/singlemap"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.84", features=["full", "fold", "printing"] }
quote ="1.0.14"
proc-macro2 = "1.0"
substring="1.4.5"
pest = "2.1.3"
pest_derive = "2.1.0"
log="0.4.14"
once_cell="1.9.0"
parking_lot="0.11.2"
dashmap="5.0.0"